cros: Temporary fix to show ProxyBasicAuth prompt on views-login.

When the basic auth widget appears, it is fetching the parent widget using
WebContentsModalDialogHost::GetHostView. CaptivePortalDialogDelegate overrides
this to return the captive portal widget, which is hidden. Thus, the auth widget
is also hidden because its parent widget is hidden.

I believe the correct long-term fix is to not share a WebContents instance
bewteen OoobeUIDialogDelegate and CaptivePortalDialogDelegate. However, that
seems like a much riskier change.

Add a hacky check to return the widget for OoobeUIDialogDelegate if the
CaptivePortalDialogDelegate widget is currently hidden.

TBR=jdufault@google.com

(cherry picked from commit fd994373bb1c18957c7163341bb4fa23a44688b6 [formerly 38e53d43e41a5e6309222ffdf8d0a1d9637c5d58])

Bug: 890976
Change-Id: I0d974449d7eb425a8bb99dcc8d34eb6582c097e7
Reviewed-on: https://chromium-review.googlesource.com/c/1263040
Reviewed-by: Quan Nguyen <qnnguyen@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Jacob Dufault <jdufault@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#596865}
Reviewed-on: https://chromium-review.googlesource.com/c/1265159
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#875}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: b01aa4f4f1b31f449476d2c70859964f9bbdbb07